# CNN_Classifier_Template

./: README.md  params.yaml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py
configs/: config.yaml
notebooks/: 01_data_analysis.ipynb
research/: trials.ipynb
src/components/: stage01_data_ingestion.py  stage02_prepare_base_model.py  stage03_callbacks.py  stage04_training.py  stage05_evaluation.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/exception/: __init__.py
src/logger/: logging.py
src/pipeline/: stage01_data_pipeline.py  stage02_prepare_basemodel_pipeline.py  stage03_training_pipeline.py  stage04_evaluation_pipeline.py
src/utils/: utils.py
