[metadata]  # <-- PURELY descriptive
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]    # <-- CONFIGURATION
install_requires =
    tensorflow>=2.9.0
    opencv-python
    fastapi
    uvicorn
    pyyaml
    scikit-learn
    matplotlib
    ensure==1.0.2
python_requires = >=3.10   

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py